src/objects/MUSW__Bluebeam_Session_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>MUSW__Bluebeam_File_Checkin_Counter_API_Name__c</fullName>
        <label>File Checkin Counter Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Bluebeam_Session_Id_API_Name__c</fullName>
        <description>Field API Name where the BB Session Id value is to be stored in</description>
        <inlineHelpText>Field API Name where the BB Session Id value is to be stored in</inlineHelpText>
        <label>Session Id Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Session_Name_Definition__c</fullName>
        <description>Format to use for BB Session Name eg. {!MUSW__Milestone__c.Name}</description>
        <inlineHelpText>Format to use for BB Session Name eg. {!MUSW__Milestone__c.Name}</inlineHelpText>
        <label>Session Name Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Status_Field_API_Name__c</fullName>
        <label>Status Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bluebeam Session Setting</label>
    <pluralLabel>Bluebeam Sessions Settings</pluralLabel>
</CustomObject>